<resources>
    <string name="passport_account_label">Mi Account</string>
    <string name="passport_notification_title">Sign in error for %1$s</string>
    <string name="passport_login_prompt">One Mi Account. All Mi services.</string>
    <string name="passport_login_using_other_ways"><u>Other ways to sign in</u></string>
    <string name="passport_login_title">Sign in to your Mi Account</string>
    <string name="passport_login">Sign in</string>
    <string name="passport_relogin">Sign in again</string>
    <string name="passport_skip_login">Skip</string>
    <string name="passport_skip_setup_account_title">Skip setup</string>
    <string name="passport_skip_setup_account_msg">You can set up a Mi Account later in Settings.</string>
    <string name="passport_find_password_on_web_msg">Visit account.mi.com to reset your password.</string>
    <string name="passport_title_reg">Create an account</string>
    <string name="passport_reg_prompt">"Don't have a Mi Account? Create one for free."</string>
    <string name="passport_uplink_reg">Use phone number</string>
    <string name="passport_uplink_slot1_reg">Use SIM 1</string>
    <string name="passport_uplink_slot2_reg">Use SIM 2</string>
    <string name="passport_reg_via_sms_alert">An outgoing SMS message may be required to activate this service. Your carrier will charge you for this message.</string>
    <string name="passport_reg_using_other_phone"><u>Use alternate phone number</u></string>
    <string name="passport_reg_btn_using_other_phone">Use alternate phone number</string>
    <string name="passport_downlink_reg">Create account using phone number</string>
    <string name="passport_select_reg_ways_title">Other ways to sign up</string>
    <string name="passport_reg_using_phone_number_prompt">Create account using phone number</string>
    <string name="passport_reg_using_other_phone_number_prompt">"Create a new account using "</string>
    <string name="passport_reg_success_summary">%1$s has been bound with your account. You can use it to sign in or to reset your password.</string>
    <string name="passport_re_register">Sign up again</string>
    <string name="passport_register">Create an account</string>
    <string name="passport_vcode_sms_send_prompt">Send verification code to %s</string>
    <string name="passport_get_verify_code">Get code</string>
    <string name="passport_re_get_verify_code">Get code again</string>
    <string name="passport_getting_verify_code">Getting</string>
    <string name="passport_send_too_many_code">Too many verification codes have been sent to this number. Wait 24 hours and try again.</string>
    <string name="passport_restart_register_title">Create a Mi Account</string>
    <string name="passport_restart_register_prompt">Another verification message may be required to create your account.</string>
    <string name="passport_wait_for_sms_prompt">"Start over now? Verification messages may take to 10 minutes to be delivered when your phone is within range of your carrier's network."</string>
    <string name="passport_send_vcode_failed">"Couldn't send code"</string>
    <string name="passport_sms_send_success">Sent</string>
    <string name="passport_recycle_account_prompt">Is this your Mi Account?</string>
    <string name="passport_confirm_recycle_account">Yes</string>
    <string name="passport_reject_recycle_account">Nope</string>
    <string name="passport_input_password_for_login">This number is associated with an existing account, enter your password</string>
    <string name="passport_registered_phone_user_ID">User ID: %s</string>
    <string name="passport_registered_phone_user_name">Username: %s</string>
    <string name="passport_password_req_notice">Password must be 8-16 characters in length and include both numbers and letters (case sensitive).</string>
    <string name="passport_reset_password_prompt">Password is incorrect</string>
    <string name="passport_reset_password_title">Reset password</string>
    <string name="passport_auto_generate_pwd">Generate secure password</string>
    <string name="passport_pwd_generate_failure">"Couldn't generate password"</string>
    <string name="passport_use_generated_pwd_title">Remember your password</string>
    <string name="passport_use_generated_pwd_message">Make sure you remember your password. You can use it to sign in to other Mi services.</string>
    <string name="passport_register_restricted_title">"Can't use this phone number"</string>
    <string name="passport_register_restricted">Too many accounts have been associated with this number, try a different one</string>
    <string name="passport_change_phone_number">Switch numbers</string>
    <string name="passport_forget_password"><u>Forgot password</u></string>
    <string name="passport_forget_password_no_underline">Forgot password</string>
    <string name="passport_reg_type_email">Use email address</string>
    <string name="passport_register_by_email"><u>Create an account using email address</u></string>
    <string name="passport_account_not_actived">"Your account hasn't been activated"</string>
    <string name="passport_active_email_visit">Check your inbox at %s</string>
    <string name="passport_click_email_to_valid">"

To activate your account, follow the 
 link we've sent to your inbox."</string>
    <string name="passport_resend_active_email">Resend email</string>
    <string name="passport_failed_to_send_activate_email">"Couldn't send activation email"</string>
    <string name="passport_reg_success">Account created</string>
    <string name="passport_email_reg_success_summary">%1$s has been bound with your account. You can use it to sign in or to reset your password.</string>
    <string name="passport_remove_unactivated_account_notice">"Your account hasn't been activated."</string>
    <string name="passport_remove_confirm">Sign out</string>
    <string name="passport_skip_register">Skip sign-up</string>
    <string name="passport_account_not_activated">"Account hasn't been activated"</string>
    <string name="passport_change_account"><u>Change account</u></string>
    <string name="passport_register_account_verified_confirm">Account verified</string>
    <string name="passport_register_account_goto_email">Go to inbox</string>
    <string name="passport_error_dup_email">The email you entered is already associated with another account.</string>
    <string name="passport_get_back_pwd">Retrieve account password</string>
    <string name="passport_login_instead_reg">Use this number</string>
    <string name="passport_login_instead_reg_with_email">Use this email</string>
    <string name="passport_quick_login_title">Enter your password</string>
    <string name="passport_quick_login_step2_title">2-step verification</string>
    <string name="passport_quick_login_dialog_title">Verify password</string>
    <string name="passport_quick_login_dialog_step2_title">2-step verification</string>
    <string name="passport_delete_account">Sign out</string>
    <string name="passport_vcode_notification_title">Your sign-in verification is incomplete</string>
    <string name="passport_account_name">Account: %1$s</string>
    <string name="passport_account_hint_text">Email address, phone number or Mi Account ID</string>
    <string name="passport_email_or_id_hint_text">Email address or Mi Account ID</string>
    <string name="passport_phone_num_hint_text">Phone number</string>
    <string name="passport_input_password_hint">Enter password</string>
    <string name="passport_input_captcha_hint">Enter code</string>
    <string name="passport_input_vcode_hint">Enter verification code</string>
    <string name="passport_email">Email address</string>
    <string name="passport_vcode_prompt_long">Enter verification code</string>
    <string name="passport_input_phone_hint">Enter phone number</string>
    <string name="passport_error_empty_username">Enter your account ID</string>
    <string name="passport_error_invalid_phone_num">Invalid phone number</string>
    <string name="passport_error_empty_phone_num">Enter phone number</string>
    <string name="passport_wrong_phone_number_format">The format of the phone number you entered is invalid</string>
    <string name="passport_error_empty_email">Enter your email address</string>
    <string name="passport_error_email">The email address you entered is invalid</string>
    <string name="passport_error_empty_pwd">Enter your password</string>
    <string name="passport_error_illegal_pwd">Invalid password</string>
    <string name="passport_error_empty_captcha_code">Enter captcha</string>
    <string name="passport_error_empty_vcode">Enter verification code</string>
    <string name="passport_i_know">Got it</string>
    <string name="passport_retry">Try again</string>
    <string name="passport_back">Back</string>
    <string name="passport_next">Next</string>
    <string name="passport_prev">Back</string>
    <string name="passport_completed">Finish</string>
    <string name="passport_verify">Verify</string>
    <string name="passport_restart">Start over</string>
    <string name="passport_yes">Yes</string>
    <string name="passport_no">No</string>
    <string name="passport_continue">Continue</string>
    <string name="passport_loading">Loading…</string>
    <string name="passport_reging">Creating account…</string>
    <string name="passport_checking_account">Checking password…</string>
    <string name="passport_checking_input">Checking input…</string>
    <string name="passport_activing_account">Activating…</string>
    <string name="passport_pwd_generating">Generating…</string>
    <string name="passport_setting">Setting up…</string>
    <string name="passport_trying_read_verify_code_sms">Getting verification code…</string>
    <string name="passport_adding_account">Adding account…</string>
    <string name="passport_sending_vcode">Sending code…</string>
    <string name="account_user_base_info">Personal info</string>
    <string name="account_user_name">Name</string>
    <string name="account_user_id">Mi Account ID</string>
    <string name="account_user_avatar">Profile photo</string>
    <string name="account_user_gender">Gender</string>
    <string name="account_user_birthday">Birthday</string>
    <string name="account_user_other_info">More sources</string>
    <string name="account_user_region">Region</string>
    <string name="account_user_location">Location</string>
    <string name="account_user_education">Education</string>
    <string name="account_user_income">Income</string>
    <string name="input_email_address_notice">"We'll use this email to verify your account"</string>
    <string name="account_user_details">Personal info</string>
    <string name="account_security">Account security</string>
    <string name="account_mibi_center">Mi Credits</string>
    <string name="account_mipay_info">Mi Pay</string>
    <string name="account_xiaomi_service">Services</string>
    <string name="cloud_service">Mi Cloud</string>
    <string name="vip_account_settings">VIP Settings</string>
    <string name="device_list__header">My devices</string>
    <string name="empty_device_list_notice">No devices</string>
    <string name="account_secure_info_pref_title">Account info</string>
    <string name="account_user_email">Email</string>
    <string name="account_user_phone">Phone</string>
    <string name="account_security_info_pref_title">Security info</string>
    <string name="account_bind_settings">Accounts</string>
    <string name="account_bind_devices">Devices</string>
    <string name="account_protection">Account protection</string>
    <string name="mipay">Pay</string>
    <string name="mipay_bank_card">Bank card</string>
    <string name="mipay_transit_card">Transport card</string>
    <string name="mipay_balance">Balance</string>
    <string name="mipay_others">Other</string>
    <string name="mipay_identity">ID verification</string>
</resources>