<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/account_user_base_info" android:key="pref_account_user_base_info">
        <com.xiaomi.account.ui.ImageValuePreference android:title="@string/account_user_avatar" android:key="pref_account_avatar" />
        <com.xiaomi.account.ui.AccountValuePreference android:title="@string/account_user_name" android:key="pref_account_username" />
        <miui.preference.ValuePreference android:title="@string/account_user_id" android:key="pref_account_userid" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/account_user_other_info" android:key="pref_account_user_other_info">
        <com.xiaomi.account.ui.AccountValuePreference android:title="@string/account_user_gender" android:key="pref_account_user_gender" />
        <com.xiaomi.account.ui.AccountValuePreference android:title="@string/account_user_birthday" android:key="pref_account_user_birthday" />
        <com.xiaomi.account.ui.AccountValuePreference android:title="@string/account_user_education" android:key="pref_user_educational_qualification" />
        <com.xiaomi.account.ui.AccountValuePreference android:title="@string/account_user_income" android:key="pref_user_income" />
        <miui.preference.ValuePreference android:title="@string/account_user_region" android:key="pref_account_user_region" />
        <com.xiaomi.account.ui.AccountValuePreference android:title="@string/account_user_location" android:key="pref_account_user_location" />
    </PreferenceCategory>
</PreferenceScreen>